booking logic updated